z-index fix for header

--- a/client/src/components/shared/Header/Header.css
+++ b/client/src/components/shared/Header/Header.css
@@ -4,7 +4,7 @@
   background-color: #e8e4d9;
   width: 100%;
   height: 120px;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   padding-left: 20px;
   padding-right: 20px;
